# zero-trust-iot-gateway

./: .gitignore  LICENSE  README.md  ZeroTrustGateway.drawio  pyproject.toml
backend/: .gitignore  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/attestation/: crypto.go  model.go  registry.go  registry_memory.go  registry_postgres.go  service.go  service_memory.go
backend/internal/audit/: memory_sink.go  sink.go  sink_memory.go  sink_postgres.go
backend/internal/config/: config.go
backend/internal/db/: migrate.go  timeouts.go
backend/internal/device/: authorization.go  device_source.go  model.go  service.go  service_impl.go  store.go  store_memory.go  store_postgres.go
backend/internal/policy/: builder.go  model.go  rule_source.go  service.go  service_impl.go  signer.go  store.go  store_memory.go  store_postgres.go  version_store.go  (+3 more)
docs/: backend-architecture.md  go-net-http.md  go-postgres-pgx.md  sequence-attestation.md  sequence-authorization.md  sequence-device-registration.md  sequence-init-to-identity-ready.md  sequence-wifi-connect.md
docs/booting_phase/: booting_phase.drawio
docs/crypto-protocols/: ecdsa-p256.md  sha-256.md
firmware/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.dev.defaults
firmware/components/zerotrust/: CMakeLists.txt
firmware/components/zerotrust/include/: zerotrust.h  ztg_gpio.h  ztg_i2c.h  ztg_network.h  ztg_resource.h  ztg_spi.h  ztg_storage.h  ztg_system.h  ztg_uart.h
firmware/components/zerotrust/src/: gate_common.cpp  gate_common.h  resource_registry.cpp  resource_registry.h  zerotrust.cpp  ztg_gpio.cpp  ztg_i2c.cpp  ztg_network.cpp  ztg_spi.cpp  ztg_storage.cpp  ztg_system.cpp  ztg_uart.cpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
(+52 files in other folders)
